[tool.poetry]
name = "multi-webcam"
version = "0.1.0"
description = "Simultaneously control multiple GoPro's as webcams"
authors = ["Tim Camise <tcamise@gopro.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4"
requests = "^2"
tk = "^0"
Pillow = "^9"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^0"
Sphinx = "^5.3.0"
rinohtype = "^0.5.4"

[tool.poetry.scripts]
start-webcam = "multi_webcam.examples.start_webcam:entrypoint"
single-webcam = "multi_webcam.examples.single_webcam:entrypoint"
multi-webcam = "multi_webcam.examples.multiple_webcams:entrypoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
