[tool.poetry]
name = "open_gopro"
version = "0.11.0"
description = "Open GoPro API and Examples"
authors = ["Tim Camise <tcamise@gopro.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/gopro/OpenGoPro/tree/main/demos/python/sdk_wireless_camera_control"
documentation = "https://gopro.github.io/OpenGoPro/"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.scripts]
gopro-photo = "open_gopro.demos.photo:entrypoint"
gopro-video = "open_gopro.demos.video:entrypoint"
gopro-log-battery = "open_gopro.demos.log_battery:entrypoint"
gopro-wifi = "open_gopro.demos.connect_wifi:entrypoint"
gopro-gui = "open_gopro.demos.gui_demo:entrypoint"
gopro-presets = "open_gopro.demos.preset_control:entrypoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
bleak = "=0.14.2"
construct = "^2"
wrapt = "^1"
requests = "^2"
protobuf = "^3"
packaging = "^21"
opencv-python = "^4"
tk = "^0.1"
Pillow = "^9"
rich = "^12"

[tool.poetry.dev-dependencies]
pydocstyle = { extras = ["toml"], version = "^6" }
pytest = "^7"
pytest-cov = "^3"
pytest-asyncio = "^0.17"
pytest-html = "^3"
coverage = { extras = ["toml"], version = "^6" }
requests-mock = "^1"
black = "*"
pylint = "^2."
mypy = "*"
types-requests = "^2"
types-attrs = "^19"
mypy-protobuf = "^3"
construct-typing = "^0.5"
sphinx = "^5"
sphinx-rtd-theme = "^1"
coverage-badge = "=1.1.0"
darglint = "^1"
poethepoet = "^0.15"
protoletariat = "^0.9"
nox = "=2022.8.7"
nox-poetry = "=1.0.1"

[tool.poe.tasks.unit_tests]
cmd = "pytest tests/unit --cov-fail-under=70"
help = "Run unit tests"

[tool.poe.tasks.types]
cmd = "mypy open_gopro"
help = "Check types"

[tool.poe.tasks.lint]
cmd = "pylint --no-docstring-rgx=__|main|parse_arguments|entrypoint open_gopro"
help = "Run pylint"

[tool.poe.tasks.format]
cmd = "black open_gopro tests"
help = "Apply black formatting to source code"

[tool.poe.tasks.pydocstyle]
cmd = "pydocstyle --config pyproject.toml -v open_gopro"
help = "check docstrings style"

[tool.poe.tasks.darglint]
cmd = "darglint -v 2 open_gopro"
help = "validate docstrings"

[tool.poe.tasks.docstrings]
sequence = ["pydocstyle", "darglint"]
help = "Format, check types, lint, check docstrings, and run unit tests"

[tool.poe.tasks.sphinx]
cmd = "sphinx-build -W --keep-going -a -E -b html docs docs/build"
help = "Build sphinx documentation."

[tool.poe.tasks.coverage]
cmd = "coverage-badge -f -o docs/_static/coverage.svg"
help = "update coverage badge"

[tool.poe.tasks.protobuf]
cmd = "sh ./tools/build_protos.sh"
help = "generate protobuf source from .proto (assumes protoc >= 3.20.1 available)"

[tool.poe.tasks.clean_artifacts]
cmd = "rm -rf **/__pycache__ *.csv *.mp4 *.jpg *.log .mypy_cache .nox"
help = "Clean testing artifacts and pycache"

[tool.poe.tasks.clean_tests]
cmd = "rm -rf .reports && rm -rf .pytest_cache"
help = "Clean test reports"

[tool.poe.tasks.clean_docs]
cmd = "rm -f docs/modules.rst && rm -rf docs/build"
help = "Clean built docs output"

[tool.poe.tasks.clean_build]
cmd = "rm -rf dist"
help = "Clean module build output"

[tool.poe.tasks.docs]
sequence = ["docstrings", "sphinx"]
help = "Validate docstrings and build docs"

[tool.poe.tasks.clean]
sequence = ["clean_artifacts", "clean_tests", "clean_docs", "clean_build"]
help = "Clean everything"

[tool.poe.tasks.all]
sequence = ["format", "types", "lint", "unit_tests", "docs"]
help = "Format, check types, lint, check docstrings, and run unit tests"

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
warn_unused_ignores = true
warn_unreachable = false
show_error_context = true
pretty = true

[tool.pytest.ini_options]
log_auto_indent = true
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file_level = "DEBUG"
log_file_format = "%(threadName)13s: %(name)40s:%(lineno)5d %(asctime)s.%(msecs)03d %(levelname)-8s | %(message)s"
log_file_date_format = "%H:%M:%S"
filterwarnings = "ignore::DeprecationWarning"
addopts = [
    "-s",
    "--capture=tee-sys",
    "--cov=open_gopro",
    "--cov-report=term",
    "--cov-report=html",
    "--html=.reports/test_report.html",
    "--self-contained-html",
    "--asyncio-mode=auto",
]

[tool.coverage.run]
data_file = ".reports/coverage/.coverage"
branch = true
source = ["open_gopro"]
omit = ["*/constants.py", "*/params.py", "open_gopro/demos*"]

[tool.coverage.html]
directory = ".reports/coverage"

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]

[tool.pylint.'MASTER']
extension-pkg-whitelist = "cv2" # TODO this isn't working
load-plugins = "pylint.extensions.docparams"
accept-no-param-doc = "yes"
accept-no-return-doc = "yes"
default-docstring-type = "google"
ignore = ["tests", "proto"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "unnecessary-lambda",
    "unnecessary-lambda-assignment",
    "too-many-ancestors",
    "no-name-in-module",
    "too-many-nested-blocks",
    "unspecified-encoding",
    "consider-using-with",
    "abstract-method",
    "useless-type-doc",
    "cyclic-import",
    "logging-fstring-interpolation",
    "logging-format-interpolation",
    "duplicate-code",
    "global-statement",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-locals",
    "too-many-lines",
    "too-many-statements",
    "fixme",
    "protected-access",
    "invalid-name",
    "unsubscriptable-object",
]

[tool.pylint.'FORMAT']
max-line-length = 160

[tool.black]
line-length = 111
exclude = ".venv"

[tool.pydocstyle]
convention = "google"
add-ignore = "D415, D107, D105"
match = '(?!params|.*pb).*\.py'
match-dir = '(?!.*demos).*'
